[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "singleflight"
version = "0.1.0"
description = "Collapse concurrent duplicate calls into one execution. Cache-stampede / thundering-herd guard. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "WCN Development Co"}]
keywords = ["singleflight","concurrency","cache-stampede","thundering-herd","deduplication"]
classifiers = ["License :: OSI Approved :: MIT License","Programming Language :: Python :: 3","Operating System :: OS Independent","Intended Audience :: Developers"]
[project.urls]
Homepage = "https://github.com/WCN-DEV-CO/singleflight"
